EC2.yml
AWSTemplateFormatVersion: "2010-09-09"
Description: Provision EC2

Parameters:
  KeyName:
    Description: The EC2 Key Pair to allow SSH access to the instance
    Type: "AWS::EC2::KeyPair::KeyName"

Resources:
  EC2A:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-0ce107ae7af2e92b5
      KeyName: !Ref KeyName
      InstanceType: t2.micro
      NetworkInterfaces:
        - AssociatePublicIpAddress: "true"
          DeviceIndex: "0"
          SubnetId: { "Fn::ImportValue": "raisetechtask9-public-subnet-1a" }
          GroupSet:
            - !Ref EC2SecurityGroup
      UserData: !Base64 |
        #!/bin/bash -xe
        yum update -y

      Tags:
          - Key: Name
            Value: ec2-raisetechtask9A

  EC2C:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-0ce107ae7af2e92b5
      KeyName: !Ref KeyName
      InstanceType: t2.micro
      NetworkInterfaces:
        - AssociatePublicIpAddress: "true"
          DeviceIndex: "0"
          SubnetId: { "Fn::ImportValue": "raisetechtask9-public-subnet-1c" }
          GroupSet:
            - !Ref EC2SecurityGroup
      UserData: !Base64 |
        #!/bin/bash
        sudo yum install -y
      Tags:
          - Key: Name
            Value: ec2-raisetechtask9C

  EC2SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: ec2-sg-raisetechtask9
      GroupDescription: Allow SSH and HTTP
      VpcId: { "Fn::ImportValue": "raisetechtask9-vpc" }
      SecurityGroupIngress:
        # http
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        # ssh
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0

  ElasticIPA:
    Type: AWS::EC2::EIP
    Properties:
      InstanceId: !Ref EC2A
      Domain: vpc

  IPAssocA:
    Type: AWS::EC2::EIPAssociation
    Properties:
      InstanceId: !Ref EC2A
      EIP: !Ref ElasticIPA

  ElasticIPC:
    Type: AWS::EC2::EIP
    Properties:
      InstanceId: !Ref EC2C
      Domain: vpc

  IPAssocC:
    Type: AWS::EC2::EIPAssociation
    Properties:
      InstanceId: !Ref EC2C
      EIP: !Ref ElasticIPC

  ALB:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Tags:
        - Key: Name
          Value: raisetechtask9-alb
      Scheme: "internet-facing"
      LoadBalancerAttributes:
        - Key: "deletion_protection.enabled"
          Value: false
        - Key: "idle_timeout.timeout_seconds"
          Value: 60
      SecurityGroups:
        - !Ref ALBSecurityGroup
      Subnets:
        - { "Fn::ImportValue": "raisetechtask9-public-subnet-1a" }
        - { "Fn::ImportValue": "raisetechtask9-public-subnet-1c" }

  ALBListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
        - TargetGroupArn: !Ref TargetGroup
          Type: forward
      LoadBalancerArn: !Ref ALB
      Port: 80
      Protocol: HTTP

  ALBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: alb-sg-raisetechtask9
      GroupDescription: Allow HTTP
      VpcId: { "Fn::ImportValue": "raisetechtask9-vpc" }
      SecurityGroupIngress:
        # http
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0

  TargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      VpcId: { "Fn::ImportValue": "raisetechtask9-vpc" }
      Name: alb-tg-raisetechtask9
      Protocol: HTTP
      Port: 80
      HealthCheckProtocol: HTTP
      HealthCheckPath: "/"
      HealthCheckPort: "traffic-port"
      HealthyThresholdCount: 2
      UnhealthyThresholdCount: 2
      HealthCheckTimeoutSeconds: 5
      HealthCheckIntervalSeconds: 10
      Matcher:
        HttpCode: 200
      Tags:
        - Key: Name
          Value: alb-tg-raisetechtask9
      TargetGroupAttributes:
        - Key: "deregistration_delay.timeout_seconds"
          Value: 300
        - Key: "stickiness.enabled"
          Value: false
        - Key: "stickiness.type"
          Value: lb_cookie
        - Key: "stickiness.lb_cookie.duration_seconds"
          Value: 86400
      Targets:
        - Id: !Ref EC2A
        - Id: !Ref EC2C
          Port: 80
